--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 x64/
 .vs/
 computer-network/x64/
+computer-network/Debug/
+Debug/
+Windows_VS2017/
+script/
+computer-network-2/x64/
+computer-network-2/Debug/
