--- a/computer-network-2/computer-network-2.vcxproj
+++ b/computer-network-2/computer-network-2.vcxproj
@@ -18,34 +18,12 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Configuration.h" />
-    <ClInclude Include="HandleRequest.h" />
-    <ClInclude Include="HandleResponse.h" />
-    <ClInclude Include="HttpGenerator.h" />
-    <ClInclude Include="HttpParser.h" />
-    <ClInclude Include="Log.h" />
-    <ClInclude Include="Reader.h" />
-    <ClInclude Include="Server.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Configuration.cpp" />
-    <ClCompile Include="HandleRequest.cpp" />
-    <ClCompile Include="HandleResponse.cpp" />
-    <ClCompile Include="HttpGenerator.cpp" />
-    <ClCompile Include="HttpParser.cpp" />
-    <ClCompile Include="Log.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="Reader.cpp" />
-    <ClCompile Include="Server.cpp" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{a51218ea-e297-4f37-8618-73ab623b9de6}</ProjectGuid>
-    <RootNamespace>computernetwork</RootNamespace>
+    <ProjectGuid>{42daa4e2-48a6-4425-a564-91505b078a3e}</ProjectGuid>
+    <RootNamespace>computernetwork2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>computer-network-1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -110,6 +88,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader>Create</PrecompiledHeader>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -136,9 +116,9 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions);_WINSOCK_DEPRECATED_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -151,10 +131,8 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions);_WINSOCK_DEPRECATED_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <EnableParallelCodeGeneration>true</EnableParallelCodeGeneration>
-      <EnableEnhancedInstructionSet>AdvancedVectorExtensions2</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -163,6 +141,37 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="computer-network-2.cpp" />
+    <ClCompile Include="GBNReceiver.cpp" />
+    <ClCompile Include="GBNSender.cpp" />
+    <ClCompile Include="SRReceiver.cpp" />
+    <ClCompile Include="SRSender.cpp" />
+    <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="StopWaitRdtReceiver.cpp" />
+    <ClCompile Include="StopWaitRdtSender.cpp" />
+    <ClCompile Include="TCPReceiver.cpp" />
+    <ClCompile Include="TCPSender.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DataStructure.h" />
+    <ClInclude Include="GBNReceiver.h" />
+    <ClInclude Include="GBNSender.h" />
+    <ClInclude Include="Global.h" />
+    <ClInclude Include="NetworkService.h" />
+    <ClInclude Include="RandomEventEnum.h" />
+    <ClInclude Include="RdtReceiver.h" />
+    <ClInclude Include="RdtSender.h" />
+    <ClInclude Include="SRReceiver.h" />
+    <ClInclude Include="SRSender.h" />
+    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="StopWaitRdtReceiver.h" />
+    <ClInclude Include="StopWaitRdtSender.h" />
+    <ClInclude Include="targetver.h" />
+    <ClInclude Include="TCPReceiver.h" />
+    <ClInclude Include="TCPSender.h" />
+    <ClInclude Include="Tool.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
